--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1 style="text-align:center;font-size:8em">RAISING HELL</h1>
-    <h1>YEAH!</h1>
+    <h1 style ="text-align:center;font-size:4em">YEAH!</h1>
   </body>
 </html>
