--- a/index.html
+++ b/index.html
@@ -1,45 +1,17 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rhian Advincula">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface:400|Libre+Baskerville:400,400i,700">
-    <link rel="stylesheet" href="css/new.css">
-    <!-- <link rel="stylesheet" href="font/Mellony.css"> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/new.js"></script>
+
     <title>Raising Hell</title>
   </head>
-
+  <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#demo">Demo</a>
+  <a href="#contact">Contact</a>
+</div>
   <body>
-  <body data-spy="scroll" data-target="#my-navbar" data-offset="150">
-  <nav id="my-navbar" class="navbar navbar-expand-lg navbar-dark navbar-custom-color fixed-top">
-    <a id="brand" class="navbar-brand" href="#">Rhian Mary Reyes Advincula</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#demo">Demo</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
     <h1 style="text-align:center;font-size:8em">RAISING HELL</h1>
     <h1>RAISING HELL</h1>
     <h2>RAISING HELL</h2>
@@ -47,15 +19,15 @@
     <h4>RAISING HELL</h4>
   </body>
 
-      <div id="about" class="block-margins">
-    here is about
+  <div id="about">
+
   </div>
 
-      <div id="demo" class="block-margins">
+  <div id="demo">
     here is a demo
   </div>
 
-      <div id="contact" class="block-margins">
+  <div id="contact">
     is is contact info
   </div>
 </html>
