--- a/index.html
+++ b/index.html
@@ -1,33 +1,121 @@
 <!DOCTYPE html>
 <html>
-https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
   <head>
+    <meta name="author" content="Rhian Advincula">
+    <meta name="description" content="Video Game Marketing">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <!---CSS and Bootsrrap-->
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/losersclub.css">
+    <!-- Javascript Files (toggle, smooth scroll, slider) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 
     <title>Raising Hell</title>
+
   </head>
-  <div class="topnav">
+  <!-- <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#about">About</a>
   <a href="#demo">Demo</a>
   <a href="#contact">Contact</a>
-</div>
+</div> -->
   <body>
-    <h1 style="text-align:center;font-size:8em">RAISING HELL</h1>
-    <h1>RAISING HELL</h1>
-    <h2>RAISING HELL</h2>
-    <h3>RAISING HELL</h3>
-    <h4>RAISING HELL</h4>
-  </body>
+    <!--NAVIGATION BAR-->
 
-  <div id="about">
+    <div class="container-fluid sticky-top navbar-color" >
+      <ul class="nav justify-content-end">
+        <nav class="navbar">
+      <a class="navbar-brand" href="#">
+        <!-- <img src="content/_LOSERSCLUBlogo.png" width="50" height="50" alt=""> -->
+        <li>
+          <a class="nav-item navigation active" href="#home">Home</a>
+        </li>
+        <li>
+          <a class="nav-item navigation" href=#about>The Game</a>
+        </li>
+        <li>
+          <a class="nav-item navigation" href=#demo>Demo</a>
+        </li>
+        <li>
+          <a class="nav-item navigation" href=#team>Meet the Team</a>
+        </li>
+        <li>
+          <a class="nav-item navigation" href=#contact>Contact</a>
+        </li>
+      </a>
+    </nav>
+      </ul>
+    </div>
 
+
+
+    <!--BOOTSTRAP CAROUSEL-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <!--Add more indicators per added photo-->
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="https://images.pexels.com/photos/1336409/pexels-photo-1336409.jpeg?cs=srgb&dl=adult-couple-fun-1336409.jpg&fm=jpg" alt="1st Slide">
+        </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://images.pexels.com/photos/976916/pexels-photo-976916.jpeg?auto=compress&cs=tinysrgb&h=350" alt="2nd Slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://images.pexels.com/photos/1367188/pexels-photo-1367188.jpeg?auto=compress&cs=tinysrgb&h=350" alt="3rd Slide">
+          </div>
+        </div>
+      </div>
+      <div class="card bg-dark text-white">
+  <img class="card-img" src="content/cityscape.png" alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">
+
+      <div class= "row">
+        <div id="about" class="block-margins">
+          <div class="header">
+            <h3>ABOUT SECTION</h3>
+          </div>
+        </div>
+      </div>
+
+      <div class= "row">
+        <div id="demo" class="block-margins">
+          <div class="header">
+            <h3>DEMO SECTION</h3>
+          </div>
+        </div>
+      </div>
+
+      <div class= "row">
+        <div id="team" class="block-margins">
+          <div class="header">
+            <h3>TEAM SECTION</h3>
+          </div>
+        </div>
+      </div>
+
+      <div class= "row">
+        <div id="contact" class="block-margins">
+          <div class="header">
+            <h3>CONTACT SECTION</h3>
+          </div>
+        </div>
+      </div>
+
+    </p>
+    <p class="card-text">Last updated 3 mins ago</p>
   </div>
+</div>
 
-  <div id="demo">
-    here is a demo
-  </div>
 
-  <div id="contact">
-    is is contact info
-  </div>
+
+
+ </body>
 </html>
