--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div id="about" class="block-margins">
           <div class="header">
             <h3>ABOUT SECTION</h3>
+            <img src="content/logo.gif">
           </div>
         </div>
       </div>
