NavBar Style & About Section Edit
Changed NavBar Style to be Justified Right with RAISING HELL logo on left; fixed font style; added about section

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 </div> -->
   <body>
     <!--NAVIGATION BAR-->
-
     <div class="container-fluid sticky-top navbar-color" >
-      <ul class="nav justify-content-end">
+      <nav id="my-navbar" class="navbar navbar-expand-lg navbar-dark navbar-custom-color fixed-top">
+        <h3 id="brand" class="navbar-brand" href="#">Raising Hell</h3>
+      <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      -->
+      <ul class="nav justify-content-end" >
         <nav class="navbar">
       <a class="navbar-brand" href="#">
         <!-- <img src="content/_LOSERSCLUBlogo.png" width="50" height="50" alt=""> -->
@@ -80,7 +85,8 @@
       <div class= "row">
         <div id="about" class="block-margins">
           <div class="header">
-            <h3>ABOUT SECTION</h3>
+            <h3>ABOUT</h3>
+            Raising Hell is a fast-paced, combat-centric game in which the player takes on the roll of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
             <img src="content/logo.gif">
           </div>
         </div>
@@ -95,7 +101,7 @@
       </div>
 
     </p>
-    <p class="card-text">Last updated 3 mins ago</p>
+    <p class="card-text">End of Card</p>
   </div>
 </div>
 
