--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <!--NAVIGATION BAR-->
     <div class="container-fluid sticky-top navbar-color" >
-      <nav id="my-navbar" class="navbar navbar-expand-lg navbar-dark navbar-custom-color fixed-top">
+      <nav id="my-navbar" class="navbar navbar-expand-lg navbar-dark navigation navbar-custom-color fixed-top">
         <h3 id="brand" class="navbar-brand" href="#">Raising Hell</h3>
       <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
