--- a/index.html
+++ b/index.html
@@ -11,29 +11,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-
     <title>Raising Hell</title>
 
   </head>
-  <!-- <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#demo">Demo</a>
-  <a href="#contact">Contact</a>
-</div> -->
   <body>
     <!--NAVIGATION BAR-->
     <div class="container-fluid sticky-top navbar-color" >
       <nav id="my-navbar" class="navbar navbar-expand-lg navbar-dark navigation navbar-custom-color fixed-top">
         <h3 id="brand" class="navbar-brand" href="#">Raising Hell</h3>
-      <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      -->
       <ul class="nav justify-content-end" >
         <nav class="navbar">
       <a class="navbar-brand" href="#">
-        <!-- <img src="content/_LOSERSCLUBlogo.png" width="50" height="50" alt=""> -->
         <li>
           <a class="nav-item navigation active" href="#home">Home</a>
         </li>
@@ -53,8 +41,6 @@
     </nav>
       </ul>
     </div>
-
-
 
     <!--BOOTSTRAP CAROUSEL-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -76,12 +62,46 @@
           </div>
         </div>
       </div>
-      <div class="card bg-dark text-white">
-  <img class="card-img" src="content/cityscape.png" alt="Card image">
-  <div class="card-img-overlay">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">
 
+<!-- CARD CANISTER START-->
+
+  <div class="card text-white">
+
+<!-- PARALLAX -->
+
+        <style>
+        .parallax {
+            /* The image used */
+            background-image: url("content/cityscape.png");
+
+            /* Set a specific height */
+            height: 1000px;
+
+            /* Create the parallax scrolling effect */
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        </style>
+<div style="height:100px;background-color:white">
+        <p>Beginning of Parallax</p>
+  </div>
+  <div class="parallax"></div>
+
+  <div style="height:100px;background-color:white">
+
+    <p>End of Parallax</p>
+
+  </div>
+  <img class="card-img parallax" src="content/cityscape.png" alt="Card image" >
+  <div class="card-img-overlay">
+
+<!-- End of Parallax -->
+
+    <h5 class="card-title">About & Demo Section Card</h5>
+    <p class="card-text">
+<!-- About -->
       <div class= "row">
         <div id="about" class="block-margins">
           <div class="header">
@@ -91,7 +111,7 @@
           </div>
         </div>
       </div>
-
+<!-- Demo -->
       <div class= "row">
         <div id="demo" class="block-margins">
           <div class="header">
@@ -101,7 +121,7 @@
       </div>
 
     </p>
-    <p class="card-text">End of Card</p>
+    <p class="card-text">End of About & Demo Card</p>
   </div>
 </div>
 
@@ -120,7 +140,6 @@
     </div>
   </div>
 </div>
-
 
  </body>
 </html>
