--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <!-- Javascript Files (toggle, smooth scroll, slider) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
     <title>Raising Hell</title>
-
   </head>
+
   <body>
     <!--NAVIGATION BAR-->
     <div class="container-fluid sticky-top navbar-color" >
@@ -65,18 +64,15 @@
 
 <!-- CARD CANISTER START-->
 
-  <div class="card text-white">
+
 
 <!-- PARALLAX -->
-
         <style>
         .parallax {
             /* The image used */
             background-image: url("content/cityscape.png");
-
             /* Set a specific height */
-            height: 1000px;
-
+            height: 500px;
             /* Create the parallax scrolling effect */
             background-attachment: fixed;
             background-position: center;
@@ -84,62 +80,56 @@
             background-size: cover;
         }
         </style>
-<div style="height:100px;background-color:white">
+
+  <div style="display: flex; flex-direction: column;background-color:rgba(17, 24, 52, .75)">
         <p>Beginning of Parallax</p>
+<!-- About -->
+        <div class= "row">
+          <div id="about" class="block-margins">
+            <div class="header">
+              <h3>ABOUT</h3>
+              Raising Hell is a fast-paced, combat-centric game in which the player takes on the roll of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
+              <img src="content/logo.gif">
+            </div>
+          </div>
+        </div>
+  <!-- Demo -->
+        <div class= "row">
+          <div id="demo" class="block-margins">
+            <div class="header">
+              <h3>DEMO SECTION</h3>
+            </div>
+          </div>
+        </div>
+
   </div>
+
+
   <div class="parallax"></div>
 
-  <div style="height:100px;background-color:white">
+  <div class= "row">
+    <div id="team" class="block-margins">
+      <div class="header">
+        <h3>Meet The Team</h3>
+      </div>
+    </div>
+  </div>
+
+  <div style="height:500px;background-color:rgba(17, 24, 52, .75)">
 
     <p>End of Parallax</p>
 
-  </div>
-  <img class="card-img parallax" src="content/cityscape.png" alt="Card image" >
-  <div class="card-img-overlay">
+    <div class= "row">
+      <div id="contact" class="block-margins">
+        <div class="header">
+          <h3>CONTACT SECTION</h3>
+        </div>
+      </div>
+    </div>
 
 <!-- End of Parallax -->
 
-    <h5 class="card-title">About & Demo Section Card</h5>
-    <p class="card-text">
-<!-- About -->
-      <div class= "row">
-        <div id="about" class="block-margins">
-          <div class="header">
-            <h3>ABOUT</h3>
-            Raising Hell is a fast-paced, combat-centric game in which the player takes on the roll of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
-            <img src="content/logo.gif">
-          </div>
-        </div>
-      </div>
-<!-- Demo -->
-      <div class= "row">
-        <div id="demo" class="block-margins">
-          <div class="header">
-            <h3>DEMO SECTION</h3>
-          </div>
-        </div>
-      </div>
 
-    </p>
-    <p class="card-text">End of About & Demo Card</p>
-  </div>
-</div>
-
-<div class= "row">
-  <div id="team" class="block-margins">
-    <div class="header">
-      <h3>TEAM SECTION</h3>
-    </div>
-  </div>
-</div>
-
-<div class= "row">
-  <div id="contact" class="block-margins">
-    <div class="header">
-      <h3>CONTACT SECTION</h3>
-    </div>
-  </div>
-</div>
 
  </body>
 </html>
