--- a/index.html
+++ b/index.html
@@ -62,74 +62,73 @@
         </div>
       </div>
 
-<!-- CARD CANISTER START-->
 
+      <style>
+      .parallax {
+          /* The image used */
+          background-image: url("content/cityscape.png");
 
+          /* Set a specific height */
+          min-height: 500px;
 
-<!-- PARALLAX -->
-        <style>
-        .parallax {
-            /* The image used */
-            background-image: url("content/cityscape.png");
-            /* Set a specific height */
-            height: 500px;
-            /* Create the parallax scrolling effect */
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        </style>
+          /* Create the parallax scrolling effect */
+          background-attachment: fixed;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+      }
+      </style>
+      </head>
+      <body>
 
-  <div style="display: flex; flex-direction: column;background-color:rgba(17, 24, 52, .75)">
-        <p>Beginning of Parallax</p>
-<!-- About -->
+        <!-- About -->
+                <div class= "row">
+                  <div id="about" class="block-margins">
+                    <div class="header">
+                      <h3>ABOUT</h3>
+                    </div>
+                    <break>
+                    <div class="text-block">
+                      <p>
+                      Raising Hell is a fast-paced, combat-centric game in which the player takes on the roll of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
+                      </p>
+                      <img src="content/logo.gif">
+                    </div>
+                  </div>
+                </div>
+
+          <!-- Demo -->
+                <div class= "row">
+                  <div id="demo" class="block-margins">
+                    <div class="header">
+                      <h3>DEMO SECTION</h3>
+                    </div>
+                  </div>
+                </div>
+
+      <div class="parallax">
+
         <div class= "row">
-          <div id="about" class="block-margins">
+          <div id="team" class="block-margins">
             <div class="header">
-              <h3>ABOUT</h3>
-              Raising Hell is a fast-paced, combat-centric game in which the player takes on the roll of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
-              <img src="content/logo.gif">
+              <h3>Meet The Team</h3>
             </div>
           </div>
         </div>
-  <!-- Demo -->
+
+      </div>
+
+      <div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
+
         <div class= "row">
-          <div id="demo" class="block-margins">
+          <div id="contact" class="block-margins">
             <div class="header">
-              <h3>DEMO SECTION</h3>
+              <h3>CONTACT SECTION</h3>
             </div>
           </div>
         </div>
 
-  </div>
-
-
-  <div class="parallax"></div>
-
-  <div class= "row">
-    <div id="team" class="block-margins">
-      <div class="header">
-        <h3>Meet The Team</h3>
       </div>
-    </div>
-  </div>
 
-  <div style="height:500px;background-color:rgba(17, 24, 52, .75)">
-
-    <p>End of Parallax</p>
-
-    <div class= "row">
-      <div id="contact" class="block-margins">
-        <div class="header">
-          <h3>CONTACT SECTION</h3>
-        </div>
-      </div>
-    </div>
-
-<!-- End of Parallax -->
-
-
-
- </body>
-</html>
+      </body>
+      </html>
