--- a/index.html
+++ b/index.html
@@ -62,14 +62,17 @@
         </div>
       </div>
 
+      <!--------------------------------------------------------------------------->
+      <!---PARALLAX--->
+      <!--------------------------------------------------------------------------->
 
       <style>
       .parallax {
           /* The image used */
-          background-image: url("content/cityscape.png");
+          background-image: url("content/characterGifTest.gif");
 
           /* Set a specific height */
-          min-height: 500px;
+          min-height: 700px;
 
           /* Create the parallax scrolling effect */
           background-attachment: fixed;
@@ -78,10 +81,9 @@
           background-size: cover;
       }
       </style>
-      </head>
-      <body>
 
-<!-- About -->
+
+      <!-- About -->
       <div class= "row" style="background-color:rgba(178, 206, 227, 1); height:auto">
         <div id="about" class="block-margins">
           <div class="header">
@@ -97,6 +99,7 @@
         </div>
       </div>
 
+
       <!-- Demo -->
         <div class= "row" style="background-color:black; height:auto">
           <div id="demo" class="block-margins">
@@ -107,30 +110,77 @@
           </div>
         </div>
 
-      <div class="parallax">
 
-        <div class= "row">
-          <div id="team" class="block-margins">
-            <div class="header">
-              <h3>Meet The Team</h3>
-            </div>
-          </div>
-        </div>
-
-      </div>
+      <div class="parallax"></div>
 
       <div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
 
-        <div class= "row" style="height:75
-        \0px">
-          <div id="contact" class="block-margins">
+      </div>
+
+
+
+
+<!--------------------------------------------------------------------------->
+<!---PARALLAX2--->
+<!--------------------------------------------------------------------------->
+
+      <style>
+      .parallax2 {
+          /* The image used */
+          background-image: url("content/cityscape.png");
+
+          /* Set a specific height */
+          min-height: 700px;
+
+          /* Create the parallax scrolling effect */
+          background-attachment: fixed;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+      }
+      </style>
+
+      <!-- Demo -->
+        <div class= "row" style="background-color:black; height:auto">
             <div class="header">
-              <h3>CONTACT SECTION</h3>
+              <h3>Something Cool!</h3>
             </div>
-          </div>
         </div>
+
+      <div class="parallax2"></div>
+
+      <div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
 
       </div>
 
-      </body>
-      </html>
+<!--------------------------------------------------------------------------->
+<!--------------------------------------------------------------------------->
+
+<div style="height:auto;background-color:rgba(17, 24, 52, 1);font-size:36px">
+
+<div class= "row">
+  <div id="team" class="block-margins">
+    <div class="header">
+      <h3>Meet The Team</h3>
+    </div>
+  </div>
+</div>
+
+</div>
+
+<div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
+
+<div class= "row" style="height:75
+\0px">
+  <div id="contact" class="block-margins">
+    <div class="header">
+      <h3>CONTACT SECTION</h3>
+    </div>
+  </div>
+</div>
+
+</div>
+
+
+</body>
+</html>
