--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://images.pexels.com/photos/1336409/pexels-photo-1336409.jpeg?cs=srgb&dl=adult-couple-fun-1336409.jpg&fm=jpg" alt="1st Slide">
+          <img class="d-block w-100" src="content/cityscape.png" alt="1st Slide">
         </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="https://images.pexels.com/photos/976916/pexels-photo-976916.jpeg?auto=compress&cs=tinysrgb&h=350" alt="2nd Slide">
@@ -69,7 +69,7 @@
       <style>
       .parallax {
           /* The image used */
-          background-image: url("content/characterGifTest.gif");
+          background-image: url("content/theCultist.gif");
 
           /* Set a specific height */
           min-height: 700px;
@@ -127,7 +127,7 @@
       <style>
       .parallax2 {
           /* The image used */
-          background-image: url("content/cityscape.png");
+          background-image: url("content/theBounty.gif");
 
           /* Set a specific height */
           min-height: 700px;
