--- a/index.html
+++ b/index.html
@@ -10,39 +10,49 @@
     <!-- Javascript Files (toggle, smooth scroll, slider) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/losersclub.js"></script>
     <title>Raising Hell</title>
   </head>
 
-  <body>
-    <!--NAVIGATION BAR-->
-    <div class="container-fluid sticky-top navbar-color" >
-      <nav id="my-navbar" class="navbar navbar-expand-lg navbar-dark navigation navbar-custom-color fixed-top">
-        <h3 id="brand" class="navbar-brand" href="#">Raising Hell</h3>
-      <ul class="nav justify-content-end" >
-        <nav class="navbar">
-      <a class="navbar-brand" href="#">
-        <li>
-          <a class="nav-item navigation active" href="#home">Home</a>
+<body data-spy="scroll" data-target="#my-navbar" data-offset="150">
+
+  <!--------------------------------------------------------------------------->
+  <!---NAV BAR--->
+  <!--------------------------------------------------------------------------->
+
+  <nav id="my-navbar" class="navbar navbar-expand-lg navbar-dark navbar-custom-color fixed-top">
+    <h3 id="brand" class="navbar-brand" href="#">Raising Hell</h3>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#home">Home</a>
         </li>
-        <li>
-          <a class="nav-item navigation" href=#about>The Game</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
         </li>
-        <li>
-          <a class="nav-item navigation" href=#demo>Demo</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#demo">Demo</a>
         </li>
-        <li>
-          <a class="nav-item navigation" href=#team>Meet the Team</a>
+				<li class="nav-item">
+					<a class="nav-link" href="#team">Meet the Team</a>
+				</li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
-        <li>
-          <a class="nav-item navigation" href=#contact>Contact</a>
-        </li>
-      </a>
-    </nav>
       </ul>
     </div>
+  </nav>
 
-    <!--BOOTSTRAP CAROUSEL-->
+  <!--------------------------------------------------------------------------->
+  <!---CAROUSEL--->
+  <!--------------------------------------------------------------------------->
+
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <div id="home" class="rectangle">
       <ol class="carousel-indicators">
         <!--Add more indicators per added photo-->
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -60,11 +70,12 @@
             <img class="d-block w-100" src="https://images.pexels.com/photos/1367188/pexels-photo-1367188.jpeg?auto=compress&cs=tinysrgb&h=350" alt="3rd Slide">
           </div>
         </div>
+        </div>
       </div>
 
-      <!--------------------------------------------------------------------------->
-      <!---PARALLAX--->
-      <!--------------------------------------------------------------------------->
+<!--------------------------------------------------------------------------->
+<!---PARALLAX--->
+<!--------------------------------------------------------------------------->
 
       <style>
       .parallax {
@@ -110,15 +121,11 @@
           </div>
         </div>
 
-
       <div class="parallax"></div>
 
       <div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
 
       </div>
-
-
-
 
 <!--------------------------------------------------------------------------->
 <!---PARALLAX2--->
@@ -140,10 +147,11 @@
       }
       </style>
 
-      <!-- Demo -->
-        <div class= "row" style="background-color:black; height:auto">
+        <div class= "row" style="background-color:white; height:auto; align:Center">
             <div class="header">
-              <h3>Something Cool!</h3>
+
+              <img src="content/logo.gif" class="center">
+
             </div>
         </div>
 
@@ -156,30 +164,32 @@
 <!--------------------------------------------------------------------------->
 <!--------------------------------------------------------------------------->
 
-<div style="height:auto;background-color:rgba(17, 24, 52, 1);font-size:36px">
+    <div style="height:auto;background-color:rgba(17, 24, 52, 1);font-size:36px">
 
-<div class= "row">
-  <div id="team" class="block-margins">
-    <div class="header">
-      <h3>Meet The Team</h3>
+    <!-- Team -->
+    <div class= "row">
+      <div id="team" class="block-margins">
+        <div class="header">
+          <h3>Meet The Team</h3>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
 
-</div>
-
-<div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
-
-<div class= "row" style="height:75
-\0px">
-  <div id="contact" class="block-margins">
-    <div class="header">
-      <h3>CONTACT SECTION</h3>
     </div>
-  </div>
-</div>
 
-</div>
+    <div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
+
+    <!-- Contact -->
+    <div class= "row" style="height:75
+    \0px">
+      <div id="contact" class="block-margins">
+        <div class="header">
+          <h3>CONTACT SECTION</h3>
+        </div>
+      </div>
+    </div>
+
+    </div>
 
 
 </body>
