--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<a class="nav-link" href="#team">Meet the Team</a>
 				</li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link" href="credits.html">Credits</a>
         </li>
       </ul>
     </div>
@@ -64,10 +64,10 @@
           <img class="d-block w-100" src="content/cityscape.png" alt="1st Slide">
         </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://images.pexels.com/photos/976916/pexels-photo-976916.jpeg?auto=compress&cs=tinysrgb&h=350" alt="2nd Slide">
+            <img class="d-block w-100" src="content/farmland.png" alt="2nd Slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="https://images.pexels.com/photos/1367188/pexels-photo-1367188.jpeg?auto=compress&cs=tinysrgb&h=350" alt="3rd Slide">
+            <img class="d-block w-100" src="content/temple.png" alt="3rd Slide">
           </div>
         </div>
         </div>
@@ -179,7 +179,7 @@
 
     <div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
 
-    <!-- Contact -->
+<!-- Contact
     <div class= "row" style="height:75
     \0px">
       <div id="contact" class="block-margins">
@@ -188,7 +188,7 @@
         </div>
       </div>
     </div>
-
+-->
     </div>
 
 
