--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@
       <div class= "row" style="background-color:rgba(178, 206, 227, 1); height:auto">
         <div id="about" class="block-margins">
           <div class="header">
-            <h3>ABOUT</h3>
+            <h3><center>ABOUT</center></h3>
           </div>
           <break>
           <div class="text-block">
-            <p>
+            <b>
             Raising Hell is a fast-paced, combat-centric game in which the player takes on the roll of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
-            </p>
-            <img src="content/logo.gif">
+           </b>
           </div>
         </div>
       </div>
@@ -115,7 +114,7 @@
         <div class= "row" style="background-color:black; height:auto">
           <div id="demo" class="block-margins">
             <div class="header">
-              <h3>DEMO SECTION</h3>
+              <h3>DEMO</h3>
             </div>
             insert demo
           </div>
@@ -164,14 +163,15 @@
 <!--------------------------------------------------------------------------->
 <!--------------------------------------------------------------------------->
 
-    <div style="height:auto;background-color:rgba(17, 24, 52, 1);font-size:36px">
+    <div style="height:auto;background-color:rgba(17, 24, 52, .75);font-size:36px">
 
     <!-- Team -->
     <div class= "row">
       <div id="team" class="block-margins">
         <div class="header">
-          <h3>Meet The Team</h3>
+          <h3><center>Meet The Team</center></h3>
         </div>
+        <img src="content/meetTheTeam.png"/ width="1200">
       </div>
     </div>
 
