--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
       }
       </style>
 
-        <div class= "row" style="background-color:white; height:auto; align:Center">
-            <div class="header">
+        <div class= "row" style="background-color:white; align:Center">
 
-              <img src="content/logo.gif" class="center">
 
-            </div>
+              <img src="content/sheep.gif" width="50%" height="50%" class="center"/>
+
+
         </div>
 
       <div class="parallax2"></div>
