--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
       <div class= "row" style="background-color:rgba(178, 206, 227, 1); height:auto">
         <div id="about" class="block-margins">
           <div class="header">
-            <h3><center>ABOUT</center></h3>
+            <h3><center>The Game</center></h3>
           </div>
           <break>
           <div class="text-block">
             <b>
-            Raising Hell is a fast-paced, combat-centric game in which the player takes on the roll of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
+            Raising Hell is a fast-paced, combat-centric game in which the player takes on the role of a cultist who serves the four reigning demon lords, known as the Depraved. The cultist has the unique quest of finding and rescuing the Depraved who have been captured by their divine counterparts, the Hallowed. To do so, he must fight through hordes of holy enemies to reach, confront, and defeat the Hallowed. The game thus consists of a series of levels, each filled with enemies and ending with a Hallowed boss. The player navigates these levels, which implement typical platforming mechanics, and along the way opposes the holy adversaries through the use of special demonic powers bestowed upon him by the Depraved shortly before their capture.
            </b>
           </div>
         </div>
@@ -116,7 +116,7 @@
             <div class="header">
               <h3>DEMO</h3>
             </div>
-            insert demo
+            Coming Soon
           </div>
         </div>
 
