Sheep Color Change

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       }
       </style>
 
-        <div class= "row" style="background-color:white; align:Center">
+        <div class= "row" style="background-color:#94C7E2; align:Center">
 
 
               <img src="content/sheep.gif" width="50%" height="50%" class="center"/>
