--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
             <div class="header">
               <h3>DEMO</h3>
             </div>
-            Coming Soon
+              <video width="720" height="480" controls>
+                <source src="content/demo.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
           </div>
         </div>
 
