--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 					<a class="nav-link" href="#team">Meet the Team</a>
 				</li>
         <li class="nav-item">
+          <a class="nav-link" href="content/designDoc.pdf">Design Doc</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="credits.html">Credits</a>
         </li>
       </ul>
